<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="radioText">RadioButton</string>
    <string name="checkText">CheckBox</string>
    <string name="switchText">What does this do?</string>
    <string name="loginB">Login</string>
    <string name="dialog_message">Do you want to quit?</string>
    <string name="dialog_title">Quit?</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather">Weather Forecast</string>
    <string name="delete">Delete this message</string>
</resources>
