<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".ListItemsActivity" >

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/radioText"
        android:layout_columnWeight="1"
        android:gravity="fill"/>
    <CheckBox
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/checkText"
        android:layout_columnWeight="1"
        android:gravity="fill"/>
    <Switch
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/switchText"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <ImageButton
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>
</GridLayout>